--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,14 @@
 		"lib": ["DOM"],
 		"paths": {
 			"@/assets/*": ["src/assets/*"],
-			"@/components/*": ["src/components/*.astro"],
-			"@/layouts/*": ["src/layouts/*.astro"],
+			"@/components/*": ["src/components/*"],
+			"@/layouts/*": ["src/layouts/*"],
 			"@/utils": ["src/utils/index.ts"],
 			"@/stores/*": ["src/stores/*"],
 			"@/types": ["src/types.ts"],
 			"@/site-config": ["src/site.config.ts"]
-		}
+		},
+		"jsx": "preserve"
 	},
 	"include": ["src", "*.ts"],
 	"exclude": ["node_modules", "**/node_modules/*", ".vscode", "dist"]
